--- a/digest_ingresos.ipynb
+++ b/digest_ingresos.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "endpoint = 'https://storage.googleapis.com/validaciones_tmsa/'\n",
         "def descargar_archivo(carpeta_destino, destino, url = endpoint):\n",
-        "    file = os.path.join(carpeta_destino, destino.split('/')[1])\n",
+        "    file = os.path.join(carpeta_destino, destino.split('/')[-1])\n",
         "    response = requests.get(url+destino)\n",
         "    if response.status_code == 200:\n",
         "        with open(file, 'wb') as f:\n",
@@ -713,6 +713,243 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ingresos_primer_trimestre_2024 = pd.read_csv('ingresos_primer_trimestre_2024.csv')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ingresos_primer_trimestre_2024.drop('Unnamed: 0', axis=1, inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ACCESO_ESTACION</th>\n",
+              "      <th>DISPOSITIVO</th>\n",
+              "      <th>FECHA_TRANSACCION</th>\n",
+              "      <th>HORA</th>\n",
+              "      <th>DIA</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>(03) BATERIA UNO VAGON SUR U. NACIONAL</td>\n",
+              "      <td>10000547</td>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>04:43:45</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>(03) BATERIA UNO VAGON SUR U. NACIONAL</td>\n",
+              "      <td>10000547</td>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>04:44:13</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>(03) BATERIA UNO VAGON SUR U. NACIONAL</td>\n",
+              "      <td>10000547</td>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>04:46:42</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>(03) BATERIA UNO VAGON SUR U. NACIONAL</td>\n",
+              "      <td>10000547</td>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>04:50:28</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>(03) BATERIA UNO VAGON SUR U. NACIONAL</td>\n",
+              "      <td>10000546</td>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>04:51:55</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                          ACCESO_ESTACION  DISPOSITIVO FECHA_TRANSACCION  \\\n",
+              "0  (03) BATERIA UNO VAGON SUR U. NACIONAL     10000547        2024-01-30   \n",
+              "1  (03) BATERIA UNO VAGON SUR U. NACIONAL     10000547        2024-01-30   \n",
+              "2  (03) BATERIA UNO VAGON SUR U. NACIONAL     10000547        2024-01-30   \n",
+              "3  (03) BATERIA UNO VAGON SUR U. NACIONAL     10000547        2024-01-30   \n",
+              "4  (03) BATERIA UNO VAGON SUR U. NACIONAL     10000546        2024-01-30   \n",
+              "\n",
+              "       HORA  DIA  \n",
+              "0  04:43:45    1  \n",
+              "1  04:44:13    1  \n",
+              "2  04:46:42    1  \n",
+              "3  04:50:28    1  \n",
+              "4  04:51:55    1  "
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ingresos_primer_trimestre_2024.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 581523 entries, 0 to 581522\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column             Non-Null Count   Dtype \n",
+            "---  ------             --------------   ----- \n",
+            " 0   ACCESO_ESTACION    581523 non-null  object\n",
+            " 1   DISPOSITIVO        581523 non-null  int64 \n",
+            " 2   FECHA_TRANSACCION  581523 non-null  object\n",
+            " 3   HORA               581523 non-null  object\n",
+            " 4   DIA                581523 non-null  int64 \n",
+            "dtypes: int64(2), object(3)\n",
+            "memory usage: 22.2+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "ingresos_primer_trimestre_2024.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ingresos_primer_trimestre_2024['FECHA_TRANSACCION'] = pd.to_datetime(ingresos_primer_trimestre_2024['FECHA_TRANSACCION'])\n",
+        "ingresos_primer_trimestre_2024['ACCESO_ESTACION'] = ingresos_primer_trimestre_2024['ACCESO_ESTACION'].astype('string')\n",
+        "ingresos_primer_trimestre_2024['HORA'] = ingresos_primer_trimestre_2024['FECHA_TRANSACCION'].dt.strftime('%H:%M:%S')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 581523 entries, 0 to 581522\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column             Non-Null Count   Dtype         \n",
+            "---  ------             --------------   -----         \n",
+            " 0   ACCESO_ESTACION    581523 non-null  string        \n",
+            " 1   DISPOSITIVO        581523 non-null  int64         \n",
+            " 2   FECHA_TRANSACCION  581523 non-null  datetime64[ns]\n",
+            " 3   HORA               581523 non-null  object        \n",
+            " 4   DIA                581523 non-null  int64         \n",
+            "dtypes: datetime64[ns](1), int64(2), object(1), string(1)\n",
+            "memory usage: 22.2+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "ingresos_primer_trimestre_2024.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<DatetimeArray>\n",
+              "['2024-01-30 00:00:00', '2024-01-31 00:00:00', '2024-02-01 00:00:00',\n",
+              " '2024-02-02 00:00:00', '2024-02-04 00:00:00', '2024-02-05 00:00:00',\n",
+              " '2024-02-07 00:00:00', '2024-02-10 00:00:00', '2024-02-11 00:00:00',\n",
+              " '2024-02-12 00:00:00', '2024-02-13 00:00:00', '2024-02-14 00:00:00',\n",
+              " '2024-02-15 00:00:00', '2024-02-16 00:00:00', '2024-02-17 00:00:00',\n",
+              " '2024-02-18 00:00:00', '2024-02-19 00:00:00', '2024-02-20 00:00:00',\n",
+              " '2024-02-21 00:00:00', '2024-02-22 00:00:00', '2024-02-23 00:00:00',\n",
+              " '2024-02-24 00:00:00', '2024-02-25 00:00:00', '2024-02-27 00:00:00',\n",
+              " '2024-02-28 00:00:00', '2024-02-29 00:00:00', '2024-03-01 00:00:00',\n",
+              " '2024-03-02 00:00:00', '2024-03-03 00:00:00', '2024-03-04 00:00:00',\n",
+              " '2024-03-05 00:00:00', '2024-03-06 00:00:00', '2024-03-07 00:00:00',\n",
+              " '2024-03-08 00:00:00', '2024-03-09 00:00:00', '2024-03-10 00:00:00',\n",
+              " '2024-03-11 00:00:00', '2024-03-12 00:00:00', '2024-03-13 00:00:00',\n",
+              " '2024-03-14 00:00:00', '2024-03-15 00:00:00', '2024-03-16 00:00:00',\n",
+              " '2024-03-17 00:00:00', '2024-03-18 00:00:00', '2024-03-19 00:00:00',\n",
+              " '2024-03-20 00:00:00', '2024-03-21 00:00:00', '2024-03-22 00:00:00',\n",
+              " '2024-03-23 00:00:00', '2024-03-24 00:00:00', '2024-03-25 00:00:00',\n",
+              " '2024-03-26 00:00:00', '2024-03-27 00:00:00', '2024-03-28 00:00:00',\n",
+              " '2024-03-29 00:00:00', '2024-03-30 00:00:00', '2024-03-31 00:00:00']\n",
+              "Length: 57, dtype: datetime64[ns]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ingresos_primer_trimestre_2024['FECHA_TRANSACCION'].unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
@@ -737,7 +974,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
