Update .gitignore to include /raw_data directory

--- a/digest_ingresos.ipynb
+++ b/digest_ingresos.ipynb
@@ -217,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,206 +225,16 @@
         "id": "5i2BLBQ700W4",
         "outputId": "c6c9e642-f231-4c1a-be38-0a1e9f591b7f"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Descargando 9 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240204.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240211.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240210.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240130.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240131.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240205.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240202.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240201.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240207.csv.\n",
-            "Data frame datos/validacionTroncal20240130.csv procesado\n",
-            "Archivo datos/validacionTroncal20240130.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240131.csv procesado\n",
-            "Archivo datos/validacionTroncal20240131.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240201.csv procesado\n",
-            "Archivo datos/validacionTroncal20240201.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240202.csv procesado\n",
-            "Archivo datos/validacionTroncal20240202.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240204.csv procesado\n",
-            "Archivo datos/validacionTroncal20240204.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240205.csv procesado\n",
-            "Archivo datos/validacionTroncal20240205.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240207.csv procesado\n",
-            "Archivo datos/validacionTroncal20240207.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240210.csv procesado\n",
-            "Archivo datos/validacionTroncal20240210.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240211.csv procesado\n",
-            "Archivo datos/validacionTroncal20240211.csv eliminado\n",
-            "Descargando 10 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240218.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240217.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240214.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240215.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240212.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240216.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240219.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240213.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240220.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240221.csv.\n",
-            "Data frame datos/validacionTroncal20240212.csv procesado\n",
-            "Archivo datos/validacionTroncal20240212.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240213.csv procesado\n",
-            "Archivo datos/validacionTroncal20240213.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240214.csv procesado\n",
-            "Archivo datos/validacionTroncal20240214.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240215.csv procesado\n",
-            "Archivo datos/validacionTroncal20240215.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240216.csv procesado\n",
-            "Archivo datos/validacionTroncal20240216.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240217.csv procesado\n",
-            "Archivo datos/validacionTroncal20240217.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240218.csv procesado\n",
-            "Archivo datos/validacionTroncal20240218.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240219.csv procesado\n",
-            "Archivo datos/validacionTroncal20240219.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240220.csv procesado\n",
-            "Archivo datos/validacionTroncal20240220.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240221.csv procesado\n",
-            "Archivo datos/validacionTroncal20240221.csv eliminado\n",
-            "Descargando 9 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240225.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240224.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240302.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240301.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240229.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240222.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240223.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240227.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240228.csv.\n",
-            "Data frame datos/validacionTroncal20240222.csv procesado\n",
-            "Archivo datos/validacionTroncal20240222.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240223.csv procesado\n",
-            "Archivo datos/validacionTroncal20240223.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240224.csv procesado\n",
-            "Archivo datos/validacionTroncal20240224.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240225.csv procesado\n",
-            "Archivo datos/validacionTroncal20240225.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240227.csv procesado\n",
-            "Archivo datos/validacionTroncal20240227.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240228.csv procesado\n",
-            "Archivo datos/validacionTroncal20240228.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240229.csv procesado\n",
-            "Archivo datos/validacionTroncal20240229.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240301.csv procesado\n",
-            "Archivo datos/validacionTroncal20240301.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240302.csv procesado\n",
-            "Archivo datos/validacionTroncal20240302.csv eliminado\n",
-            "Descargando 10 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240310.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240303.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240309.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240307.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240304.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240308.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240306.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240305.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240311.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240312.csv.\n",
-            "Data frame datos/validacionTroncal20240303.csv procesado\n",
-            "Archivo datos/validacionTroncal20240303.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240304.csv procesado\n",
-            "Archivo datos/validacionTroncal20240304.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240305.csv procesado\n",
-            "Archivo datos/validacionTroncal20240305.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240306.csv procesado\n",
-            "Archivo datos/validacionTroncal20240306.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240307.csv procesado\n",
-            "Archivo datos/validacionTroncal20240307.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240308.csv procesado\n",
-            "Archivo datos/validacionTroncal20240308.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240309.csv procesado\n",
-            "Archivo datos/validacionTroncal20240309.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240310.csv procesado\n",
-            "Archivo datos/validacionTroncal20240310.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240311.csv procesado\n",
-            "Archivo datos/validacionTroncal20240311.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240312.csv procesado\n",
-            "Archivo datos/validacionTroncal20240312.csv eliminado\n",
-            "Descargando 9 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240317.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240316.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240318.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240315.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240314.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240319.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240313.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240320.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240321.csv.\n",
-            "Data frame datos/validacionTroncal20240313.csv procesado\n",
-            "Archivo datos/validacionTroncal20240313.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240314.csv procesado\n",
-            "Archivo datos/validacionTroncal20240314.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240315.csv procesado\n",
-            "Archivo datos/validacionTroncal20240315.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240316.csv procesado\n",
-            "Archivo datos/validacionTroncal20240316.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240317.csv procesado\n",
-            "Archivo datos/validacionTroncal20240317.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240318.csv procesado\n",
-            "Archivo datos/validacionTroncal20240318.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240319.csv procesado\n",
-            "Archivo datos/validacionTroncal20240319.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240320.csv procesado\n",
-            "Archivo datos/validacionTroncal20240320.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240321.csv procesado\n",
-            "Archivo datos/validacionTroncal20240321.csv eliminado\n",
-            "Descargando 10 archivos en paralelo...\n",
-            "Usando 8 hilos...\n",
-            "Archivo descargado a datos/validacionTroncal20240329.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240328.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240325.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240324.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240331.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240330.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240323.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240327.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240326.csv.\n",
-            "Archivo descargado a datos/validacionTroncal20240322.csv.\n",
-            "Data frame datos/validacionTroncal20240322.csv procesado\n",
-            "Archivo datos/validacionTroncal20240322.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240323.csv procesado\n",
-            "Archivo datos/validacionTroncal20240323.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240324.csv procesado\n",
-            "Archivo datos/validacionTroncal20240324.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240325.csv procesado\n",
-            "Archivo datos/validacionTroncal20240325.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240326.csv procesado\n",
-            "Archivo datos/validacionTroncal20240326.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240327.csv procesado\n",
-            "Archivo datos/validacionTroncal20240327.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240328.csv procesado\n",
-            "Archivo datos/validacionTroncal20240328.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240329.csv procesado\n",
-            "Archivo datos/validacionTroncal20240329.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240330.csv procesado\n",
-            "Archivo datos/validacionTroncal20240330.csv eliminado\n",
-            "Data frame datos/validacionTroncal20240331.csv procesado\n",
-            "Archivo datos/validacionTroncal20240331.csv eliminado\n",
-            "**********TODOS LOS ARCHIVOS HAN SIDO PROCESADOS**********\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "ingresos_ultimos_20d_2024= pd.DataFrame()\n",
         "\n",
+        "files_to_download = files[:-20]\n",
         "length = len(files)\n",
         "batches = 6\n",
         "for i in range(batches):\n",
         "    print(f'Procesando batch {i+1}/{batches}...')\n",
-        "    files_batch = files[i*length//batches:(i+1)*length//batches]\n",
+        "    files_batch = files_to_download[i*length//batches:(i+1)*length//batches]\n",
         "    descargar_archivos_paralelo(\"raw_data\", files_batch)\n",
         "    dataframes = [procesar_df_lista(\"raw_data\", f) for f in files_batch]\n",
         "    ingresos_ultimos_20d_2024 = pd.concat([ingresos_ultimos_20d_2024] + dataframes, join='outer', ignore_index=True)\n",
