feat: Update digest_ingresos.ipynb to include latest validation files

--- a/digest_ingresos.ipynb
+++ b/digest_ingresos.ipynb
@@ -806,7 +806,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ValidacionTroncal/validacionTroncal20240414.csv'"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "files[-20]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ValidacionTroncal/validacionTroncal20240503.csv'"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "files[-1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": []
